--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: #1E2D3B;
+}
 
 header{
     background-color: #2E3A46;
@@ -19,11 +22,46 @@ header{
     padding: .625rem;
 }
 
-/* img{
-    height: 100%;
-    padding: .625rem;
-} */
 header{
     display: flex;
     justify-content: space-between;
+}
+
+section{
+    max-width: 70rem;
+    height: 45.25rem;
+    margin: 5.125rem auto;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px;
+    justify-content: space-evenly
+}
+.card{
+    height: 18.75rem;
+    width: calc(100% / 5 - 1.35rem);
+    background-color: #2E3A46;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.container_img{
+    width: 100%;
+    padding: 1.25rem;
+
+}
+.container_info{
+text-align: center;
+
+}
+p{
+    color: grey;
+    font-weight: bold;
+}
+h3{
+    color: white;
+    font-size: 1.75rem;
+}
+img{
+width: 100px;
+height: 100px;
 }
